--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "is-port-free",
   "version": "1.0.2",
-  "description": "A Node.js module to check if a TCP port is free.",
+  "description": "A simple node module to check if a TCP port is free on the local machine.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
