--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
   "bugs": {
     "url": "https://github.com/john-doherty/is-port-free/issues"
   },
-  "homepage": "https://github.com/john-doherty/is-port-free#readme"
+  "homepage": "https://github.com/john-doherty/is-port-free#readme",
+  "devDependencies": {
+    "eslint": "^3.12.2",
+    "eslint-config-airbnb-base": "^11.0.0",
+    "eslint-plugin-import": "^2.2.0"
+  }
 }
